object/output.txt
object$ g++ array03_dynamic_complexcls02.cpp 
array03_dynamic_complexcls02.cpp: In function ‘void test()’:
array03_dynamic_complexcls02.cpp:181:11: error: no match for ‘operator=’ (operand types are ‘myArray’ and ‘void’)
  181 |   c = b = a;
      |           ^
array03_dynamic_complexcls02.cpp:67:8: note: candidate: ‘void myArray::operator=(const myArray&)’
   67 |   void operator=(const myArray& k){
      |        ^~~~~~~~
array03_dynamic_complexcls02.cpp:67:33: note:   no known conversion for argument 1 from ‘void’ to ‘const myArray&’
   67 |   void operator=(const myArray& k){
      |                  ~~~~~~~~~~~~~~~^
object$ 
